--- a/consultaVehiculos.html
+++ b/consultaVehiculos.html
@@ -3,29 +3,33 @@
 <head>
   <meta charset="utf-8" />
   <title>Consulta Vehículos</title>
-  <script src="https://my.geotab.com/sdk/sdk.js"></script>
 </head>
 <body>
-  <h2>Vehículos activos</h2>
+  <h2>Vehículos activos v1.0</h2>
   <ul id="vehicleList"></ul>
 
   <script>
-    const api = new MyGeotabApi({ session: parent.geotab.session });
-
-    api.call("Get", {
-      typeName: "Device",
-      search: {},
-      resultsLimit: 10
-    }).then(devices => {
-      const ul = document.getElementById("vehicleList");
-      devices.forEach(device => {
-        const li = document.createElement("li");
-        li.textContent = device.name;
-        ul.appendChild(li);
-      });
-    }).catch(err => {
-      console.error("Error en llamada a API de Geotab", err);
-    });
+    geotab.addin.consultaVehiculos = function(api, state) {
+      return {
+        initialize: function (api, state, callback) {
+          api.call("Get", {
+            typeName: "Device",
+            resultsLimit: 10
+          }).then(function (devices) {
+            const ul = document.getElementById("vehicleList");
+            devices.forEach(device => {
+              const li = document.createElement("li");
+              li.textContent = device.name;
+              ul.appendChild(li);
+            });
+            callback(); // muy importante para que MyGeotab no falle
+          }).catch(function (err) {
+            console.error("Error al obtener dispositivos", err);
+            callback();
+          });
+        }
+      };
+    };
   </script>
 </body>
 </html>
