Se agrega AddIn Genesis UI interface para invocar agentes IA

--- a/genesis_ui/index.html
+++ b/genesis_ui/index.html
@@ -7,13 +7,13 @@
 <body>
     <div id="geotabAddin">
         <div class="container">
-            <h1>Geotab Genesis</h1>
-            <p>Describe el Add-In que quieres construir. Sé lo más detallado posible.</p>
+            <h1 data-i18n="Geotab Genesis">Geotab Genesis</h1>
+            <p data-i18n="An interface to generate new Geotab Add-Ins using AI.">Describe el Add-In que quieres construir. Sé lo más detallado posible.</p>
             
             <textarea id="userRequest" rows="10" placeholder="Ej: Crea un Add-In que muestre un mapa y un botón. Al hacer clic en el botón, centra el mapa en la ubicación del primer vehículo de la lista."></textarea>
             
             <button id="generateButton">
-                <span class="icon">✨</span> Generar Add-In
+                <span class="icon">✨</span> <span data-i18n="✨ New Add-In (Genesis)">Generar Add-In</span>
             </button>
         </div>
     </div>
@@ -22,4 +22,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
