Se agrega AddIn Genesis UI interface para invocar agentes IA

--- a/genesis_ui/index.html
+++ b/genesis_ui/index.html
@@ -7,6 +7,10 @@
 <body>
     <div id="geotabAddin">
         <div class="container">
+            <div id="loader-overlay" class="hidden">
+                <div class="spinner"></div>
+                <p>Generando Add-In...</p>
+            </div>
             <h1 data-i18n="Geotab Genesis">Geotab Genesis</h1>
             <p data-i18n="An interface to generate new Geotab Add-Ins using AI.">Describe el Add-In que quieres construir. Sé lo más detallado posible.</p>
             
