--- a/genesis_ui/index.html
+++ b/genesis_ui/index.html
@@ -19,6 +19,17 @@
             <button id="generateButton">
                 <span class="icon">✨</span> <span data-i18n="✨ New Add-In (Genesis)">Generar Add-In</span>
             </button>
+
+            <div id="result-container" class="hidden">
+                <h2>¡Add-In Generado!</h2>
+                <p>Copia este JSON y pégalo en MyGeotab para instalar tu nuevo Add-In.</p>
+                <div class="config-wrapper">
+                    <textarea id="config-output" readonly rows="15"></textarea>
+                    <button id="copy-button" title="Copiar al portapapeles">
+                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#FFFFFF"><path d="M0 0h24v24H0V0z" fill="none"/><path d="M16 1H4c-1.1 0-2 .9-2 2v14h2V3h12V1zm3 4H8c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h11c1.1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
+                    </button>
+                </div>
+            </div>
         </div>
     </div>
 
