Se agrega AddIn Genesis UI interface para invocar agentes IA

--- a/genesis_ui/index.html
+++ b/genesis_ui/index.html
@@ -20,7 +20,7 @@
                 <span class="icon">✨</span> <span data-i18n="✨ New Add-In (Genesis)">Generar Add-In</span>
             </button>
 
-            <div id="result-container" class="hidden">
+            <div id="result-container" >
                 <h2>¡Add-In Generado!</h2>
                 <p>Copia este JSON y pégalo en MyGeotab para instalar tu nuevo Add-In.</p>
                 <div class="config-wrapper">
